Closed
Bug 1484463
Opened 5 years ago
Closed 5 years ago
Crash in java.lang.IllegalStateException: at org.mozilla.gecko.GeckoAppShell.setScreenDepthOverride(GeckoAppShell.java)
Categories
(GeckoView :: General, defect)
Tracking
(firefox-esr52 unaffected, firefox-esr60 unaffected, firefox61 unaffected, firefox62 unaffected, firefox63 fixed)
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox61 | --- | unaffected |
firefox62 | --- | unaffected |
firefox63 | --- | fixed |
People
(Reporter: calixte, Assigned: rbarker)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is report bp-4de0448c-80a3-4f1b-a5a8-b265a0180818. ============================================================= java.lang.IllegalStateException at org.mozilla.gecko.GeckoAppShell.setScreenDepthOverride(GeckoAppShell.java:1053) at org.mozilla.gecko.mozglue.GeckoLoader.nativeRun(Native Method) at org.mozilla.gecko.GeckoThread.run(GeckoThread.java:504) ============================================================= There is 1 crash in nightly 63 with buildid 20180818100303. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1483420. [1] https://hg.mozilla.org/mozilla-central/rev?node=b439cdd35e49
Flags: needinfo?(rbarker)
Assignee | ||
Comment 1•5 years ago
|
||
It would seem that this call: https://dxr.mozilla.org/mozilla-central/source/widget/android/nsAppShell.cpp#586 Is happening too late. :jchen should I just remove the exception and just return as it used to do? I think the override needs to be set earlier to even work. My guess is this is crashing on people who have set the preference thinking it will improve performance?
Flags: needinfo?(rbarker) → needinfo?(nchen)
Assignee | ||
Comment 2•5 years ago
|
||
It was decided to just remove the setting. I'll post a patch shortly.
Flags: needinfo?(nchen)
Assignee | ||
Comment 3•5 years ago
|
||
Comment 4•5 years ago
|
||
Comment on attachment 9002551 [details] Bug 1484463 - Remove GeckoAppShell.setScreenDepthOverride(). r=jchen Jim Chen [:jchen] [:darchons] has approved the revision.
Attachment #9002551 -
Flags: review+
Pushed by rbarker@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a13766399397 Remove GeckoAppShell.setScreenDepthOverride(). r=jchen
Comment 6•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/a13766399397
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 63
Reporter | ||
Updated•5 years ago
|
Assignee: nobody → rbarker
Updated•4 years ago
|
Product: Firefox for Android → GeckoView
Updated•4 years ago
|
Keywords: crash,
regression
Target Milestone: Firefox 63 → mozilla63
Updated•4 years ago
|
Keywords: crash,
regression
You need to log in
before you can comment on or make changes to this bug.
Description
•