Bug 1484463 - Remove GeckoAppShell.setScreenDepthOverride(). r=jchen

Differential Revision: https://phabricator.services.mozilla.com/D3813